--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 *,*::after,*::before{
+    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box
+    -o-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
